[gd_scene load_steps=41 format=2]

[ext_resource path="res://duckie.png" type="Texture" id=1]
[ext_resource path="res://scenes/gameplayui.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/player.gd" type="Script" id=3]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 7.5 )

[sub_resource type="Animation" id=17]
resource_name = "FLY"
length = 0.3
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 11, 12 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=36]
resource_name = "damage"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 14, 15, 14, 15 ]
}

[sub_resource type="Animation" id=30]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=18]
resource_name = "open wings"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
length = 0.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "FLY"

[sub_resource type="AnimationNodeAnimation" id=37]
animation = "damage"

[sub_resource type="AnimationNodeAnimation" id=31]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "open wings"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=9]
states/FLY/node = SubResource( 19 )
states/FLY/position = Vector2( 176.333, 559 )
states/damage/node = SubResource( 37 )
states/damage/position = Vector2( 176.481, 103 )
states/death/node = SubResource( 31 )
states/death/position = Vector2( 262.333, 712.333 )
states/idle/node = SubResource( 5 )
states/idle/position = Vector2( 496.334, 70.5556 )
"states/open wings/node" = SubResource( 20 )
"states/open wings/position" = Vector2( 503.445, 443.889 )
states/walk/node = SubResource( 6 )
states/walk/position = Vector2( 785.667, 575.889 )
transitions = [ "walk", "idle", SubResource( 7 ), "idle", "walk", SubResource( 8 ), "FLY", "idle", SubResource( 21 ), "FLY", "walk", SubResource( 22 ), "idle", "open wings", SubResource( 23 ), "walk", "open wings", SubResource( 24 ), "open wings", "FLY", SubResource( 25 ), "open wings", "idle", SubResource( 28 ), "open wings", "walk", SubResource( 29 ), "idle", "death", SubResource( 32 ), "open wings", "death", SubResource( 33 ), "walk", "death", SubResource( 34 ), "FLY", "death", SubResource( 35 ), "open wings", "damage", SubResource( 38 ), "FLY", "damage", SubResource( 39 ), "walk", "damage", SubResource( 40 ), "idle", "damage", SubResource( 41 ), "damage", "idle", SubResource( 42 ) ]
graph_offset = Vector2( 0, 545.054 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="GDScript" id=43]
script/source = "extends AnimationTree
onready var state_machine = get(\"parameters/playback\")

func _ready():
	pass
func _process(delta):
	if get_parent().hp<=0:
		state_machine.start(\"death\")
"

[sub_resource type="RectangleShape2D" id=11]

[node name="playerduckie" type="KinematicBody2D"]
z_index = 1
collision_layer = 3
collision_mask = 3
script = ExtResource( 3 )

[node name="item1" type="Node2D" parent="."]
position = Vector2( -40, 60 )
scale = Vector2( 0.75, 0.75 )
z_index = 1

[node name="item2" type="Node2D" parent="."]
position = Vector2( 40, 60 )
scale = Vector2( 0.75, 0.75 )
z_index = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3, 3 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FLY = SubResource( 17 )
anims/RESET = SubResource( 2 )
anims/damage = SubResource( 36 )
anims/death = SubResource( 30 )
anims/idle = SubResource( 3 )
"anims/open wings" = SubResource( 18 )
anims/walk = SubResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 9 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 10 )
script = SubResource( 43 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 3, 3 )
script = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
scale = Vector2( 3.5, 3.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="hrot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )
z_index = 1

[node name="helditem" type="Node2D" parent="hrot"]
position = Vector2( 16, 0 )
scale = Vector2( 0.25, 0.25 )

[node name="rot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="erot" type="Node2D" parent="."]
scale = Vector2( 3, 3 )

[node name="ui" parent="." instance=ExtResource( 2 )]

[node name="item1" type="Node2D" parent="ui"]
position = Vector2( 597, 60 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="item2" type="Node2D" parent="ui"]
position = Vector2( 749, 60 )
scale = Vector2( 2, 2 )
z_index = 1

[node name="shopui" type="CanvasLayer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
